--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # compiled output
-/dist
 /node_modules
+dist
 
 # Logs
 logs
@@ -36,6 +36,7 @@ lerna-debug.log*
 
 aws.env
 .env.prod
+.env
 workspace/*/artifacts
 workspace/*/config/secrets.env
 workspace/*/cache
